...
                            .height(52.dp),
                        shape = MaterialTheme.shapes.medium,
                    ) {
                        if (uiState.isLoading) {
                            CircularProgressIndicator(modifier = Modifier.height(20.dp))
                        } else {
                            Text("Create vault")
                        }
                    }
                }
            }
        }
}
...
